kustomize/resume-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-app-ingress
  namespace: resume-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jaromero.cloud
      secretName: resume-app-tls
  rules:
    - host: jaromero.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: resume-backend-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-frontend-svc
                port:
                  number: 80
